Photo Persistance Storage IndexdDB

--- a/PhotoIndexedDB11/src/app/tab2/tab2.page.html
+++ b/PhotoIndexedDB11/src/app/tab2/tab2.page.html
@@ -12,7 +12,7 @@
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
+<ion-button routerLink="/tabs/tab3">Voir la galerie photo</ion-button>
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let source of imageSources">
