--- a/PhotoIndexedDB11/src/app/tab3/tab3.page.html
+++ b/PhotoIndexedDB11/src/app/tab3/tab3.page.html
@@ -1,18 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Prendre Photo
+      Galerie Photo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button (click)="takePhoto()">
-      <ion-icon name="camera"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-
   <ion-grid>
     <ion-row>
       <ion-col size="6" *ngFor="let source of imageSources">
